--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 		window.onload = function () {
 			var intervalTime = 10000;
 			var speed = 800;
-			var folder1 = "neural-style/Output6";
+			var folder1 = "/Output6";
 			$.ajax({
 				url: folder1,
 				success: function (data) {
@@ -85,7 +85,7 @@
 				}
 			});
 
-			var folder2 = "neural-style/Output3";
+			var folder2 = "/Output3";
 			$.ajax({
 				url: folder2,
 				success: function (data) {
@@ -103,7 +103,7 @@
 				}
 			});
 
-			var folder3 = "neural-style/Output5";
+			var folder3 = "/Output5";
 			$.ajax({
 				url: folder3,
 				success: function (data) {
