--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 	<div id="musician">
 		<p>Composition #1</p>
 		<audio id="audio" controls>
-			<source id="thefile" src="epoch30-slow.mp3" type="audio/mpeg" />
+			<source id="thefile" src="music/epoch30-slow.mp3" type="audio/mpeg" />
 		</audio>
 		<div>
 			<img src="music/notes1.png" />
