--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 			setInterval(getAudioTime, 100);
 
 			function getAudioTime() {
-				console.log(aud.currentTime);
+				//console.log(aud.currentTime);
 				if (aud.currentTime < 46 / 4) {
 					$('#hider1').css('width', 30 - (aud.currentTime * 2.6) + '%');
 					$('#hider2').css('width', '30%');
