--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 						if (rawFile.status === 200 || rawFile.status == 0) {
 							allText = rawFile.responseText;
 							var n = allText.search("\n");
-							console.log(n);
+							//console.log(n);
 						}
 					}
 				}
