--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 		#gallery,
 		#gallery2,
 		#gallery3 {
-			background: url(Output2/out_100.png);
+			background: url(neural-style/Output2/out_100.png);
 			margin-bottom: 20px;
 			background-repeat: no-repeat;
 			background-size: 100% 100%;
