image gallery update

--- a/index.html
+++ b/index.html
@@ -180,13 +180,24 @@
 		#gallery,
 		#gallery2,
 		#gallery3 {
-			background: url(neural-style/Output2/out_100.png);
 			margin-bottom: 20px;
 			background-repeat: no-repeat;
 			background-size: 100% 100%;
 			background-position: center;
 			width: 100%;
 			height: 280px;
+		}
+		
+		#gallery {
+			background: url(neural-style/Output2/out_990.png);
+		}
+		
+		#gallery2 {
+			background: url(neural-style/Output3/out_990.png);
+		}
+		
+		#gallery3 {
+			background: url(neural-style/Output5/out_990.png);
 		}
 		
 		#musician img {
